# telegram-message-migrator

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/rules/: backend-error-handling.md  backend-routes.md  backend-tests.md  frontend-tests.md  frontend.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  code-review.yml
app/: cli.py  config.py  crypto.py  database.py  error_strategies.py  event_broadcaster.py  live_forwarder.py  main.py  message_copy.py  middleware.py  models.py  rate_limiter.py  telegram_client.py  transfer_engine.py  user_context.py
app/routes/: auth.py  chats.py  live.py  setup.py  transfer.py  user.py
app/templates/: base.html  index.html
caddy/: Caddyfile
docs/specs/: 2026-03-20-relay-group-forwarding-design.md  2026-03-20-relay-group-forwarding-plan.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
scripts/: deploy.sh  server-setup.sh
tests/: conftest.py  test_config.py  test_crypto.py  test_database_multiuser.py  test_error_strategies.py  test_event_broadcaster.py  test_integration_multiuser.py  test_message_copy.py  test_message_dates.py  test_middleware.py  test_models.py  test_rate_limiter.py  test_relay_forward.py  test_relay_group.py  test_routes_auth_json.py  test_routes_setup.py  test_routes_user.py  test_session_manager.py  test_transfer_engine_di.py  test_user_context.py
(+61 files in other folders)
