[project]
name = "telegram-message-migrator"
version = "0.1.0"
description = "Migrate messages between two Telegram accounts with forward/copy modes, rate limiting, and checkpoint recovery."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["telegram", "migration", "forward", "backup", "telethon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "telethon>=1.38.0",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.7.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.18",
    "cryptography>=44.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]

[project.scripts]
telegram-migrator = "app.cli:main"

[project.urls]
Homepage = "https://github.com/bolin8017/telegram-message-migrator"
Issues = "https://github.com/bolin8017/telegram-message-migrator/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
